--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.1.2",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +37,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.1.4",
+    "autoprefixer": "^10.4.2",
+    "jest": "^27.5.1",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23"
   }
 }
